api/swimos_schema/src/schema/tests/derive/validated_form/invalid_container_of_kind.stderr
error[E0599]: no variant or associated item named `ThisIsntValid` found for enum `ValueKind` in the current scope
  --> $DIR/invalid_container_of_kind.rs:20:48
   |
20 |     #[form(schema(all_items(of_kind(ValueKind::ThisIsntValid))))]
   |                                                ^^^^^^^^^^^^^ variant or associated item not found in `ValueKind`
